--- a/app/src/main/res/layout/food_list2.xml
+++ b/app/src/main/res/layout/food_list2.xml
@@ -3,11 +3,6 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
-
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -18,11 +13,7 @@
                 android:id="@+id/tv_food"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textSize="20dp"
-                android:text="음식"/>
-
-
+                android:textSize="30dp"/>
         </LinearLayout>
-    </LinearLayout>
 
 </LinearLayout>
