--- a/app/src/main/res/layout/activity_menu_select.xml
+++ b/app/src/main/res/layout/activity_menu_select.xml
@@ -1,49 +1,45 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="match_parent">
+    <LinearLayout
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+        <FrameLayout
+            android:layout_width="match_parent"
+            android:layout_height="90dp"
+            android:layout_gravity="center_horizontal">
+        </FrameLayout>
+        <LinearLayout
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="80dp"
+            android:layout_gravity="center_horizontal"
+            android:weightSum="1">
+            <Spinner
+                android:id="@+id/spinner1"
+                android:layout_width="120dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="0.21" />
+            <Spinner
+                android:id="@+id/spinner2"
+                android:layout_width="120dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="0.21" />
+            <Spinner
+                android:id="@+id/spinner3"
+                android:layout_width="120dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="0.21" />
+            <Button
+                android:id="@+id/btn_register"
+                android:layout_width="120dp"
+                android:layout_height="wrap_content"
+                android:text="등록"
+                android:layout_weight="0.21" />
 
-    tools:context=".MenuSelectActivity"
-    android:orientation="vertical">
+        </LinearLayout>
+    </LinearLayout>
+</LinearLayout>
 
-    <Button
-        android:id="@+id/btn_korean"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="한식"
-        android:layout_marginBottom="100dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <Button
-        android:id="@+id/btn_western"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="양식"
-        app:layout_constraintEnd_toEndOf="@+id/btn_korean"
-        app:layout_constraintStart_toStartOf="@+id/btn_korean"
-        app:layout_constraintTop_toBottomOf="@+id/btn_korean" />
-
-    <Button
-        android:id="@+id/btn_chinese"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="중식"
-        app:layout_constraintEnd_toEndOf="@+id/btn_western"
-        app:layout_constraintStart_toStartOf="@+id/btn_western"
-        app:layout_constraintTop_toBottomOf="@+id/btn_western" />
-
-    <Button
-        android:id="@+id/btn_japanese"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="일식"
-        app:layout_constraintEnd_toEndOf="@+id/btn_chinese"
-        app:layout_constraintStart_toStartOf="@+id/btn_chinese"
-        app:layout_constraintTop_toBottomOf="@+id/btn_chinese" />
-
-</androidx.constraintlayout.widget.ConstraintLayout>
