--- a/app/src/main/res/layout/activity_create_room.xml
+++ b/app/src/main/res/layout/activity_create_room.xml
@@ -6,38 +6,53 @@
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
+
         <FrameLayout
             android:layout_width="match_parent"
             android:layout_height="90dp"
             android:layout_gravity="center_horizontal">
         </FrameLayout>
+
+        <LinearLayout
+            android:orientation="vertical"
+            android:layout_width="match_parent"
+            android:layout_height="40dp">
+
+            <EditText
+                android:id="@+id/et_roomName"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="방제를 입력하세요."/>
+
+        </LinearLayout>
+
         <LinearLayout
             android:orientation="horizontal"
             android:layout_width="match_parent"
-            android:layout_height="80dp"
+            android:layout_height="50dp"
             android:layout_gravity="center_horizontal"
             android:weightSum="1">
             <Spinner
                 android:id="@+id/spinner1"
                 android:layout_width="120dp"
                 android:layout_height="wrap_content"
-                android:layout_weight="0.21" />
+                android:layout_weight="0.25" />
             <Spinner
                 android:id="@+id/spinner2"
                 android:layout_width="120dp"
                 android:layout_height="wrap_content"
-                android:layout_weight="0.21" />
+                android:layout_weight="0.25" />
             <Spinner
                 android:id="@+id/spinner3"
                 android:layout_width="120dp"
                 android:layout_height="wrap_content"
-                android:layout_weight="0.21" />
+                android:layout_weight="0.25" />
             <Button
                 android:id="@+id/btn_register"
                 android:layout_width="120dp"
                 android:layout_height="wrap_content"
                 android:text="등록"
-                android:layout_weight="0.21" />
+                android:layout_weight="0.25" />
 
         </LinearLayout>
     </LinearLayout>
