--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,6 +6,29 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:weightSum="1">
+
+        <EditText
+            android:id="@+id/et_food"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:hint="음식을 입력하세요."
+            android:layout_weight="0.9"/>
+
+        <Button
+            android:id="@+id/btn_enter"
+            android:layout_width="40dp"
+            android:layout_height="wrap_content"
+            android:text="입력"
+            android:layout_weight="0.1"/>
+    </LinearLayout>
+
     <Button
         android:id="@+id/btn_match"
         android:layout_width="120dp"
