--- a/app/src/main/res/layout/activity_selected_list.xml
+++ b/app/src/main/res/layout/activity_selected_list.xml
@@ -14,7 +14,7 @@
         android:weightSum="1">
 
         <EditText
-            android:id="@+id/et_text"
+            android:id="@+id/et_restaurant"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:hint="음식점을 입력하세요."
