--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -32,23 +32,36 @@
 
     <ImageView
         android:id="@+id/iv_foodimg"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
+        android:layout_width="180dp"
+        android:layout_height="180dp"
         android:layout_marginStart="50dp"
+        app:layout_constraintEnd_toStartOf="@+id/btn_refresh"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/linearLayout" />
+        app:layout_constraintTop_toTopOf="@+id/linearLayout"/>
 
     <Button
         android:id="@+id/btn_refresh"
         android:layout_width="50dp"
-        android:layout_height="wrap_content"
+        android:layout_height="220dp"
+        android:layout_marginStart="20dp"
         android:text="새로고침"
         android:textSize="20sp"
-        android:layout_marginStart="20dp"
+        app:layout_constraintBottom_toBottomOf="@+id/iv_foodimg"
+        app:layout_constraintEnd_toStartOf="@+id/btn_relate"
         app:layout_constraintStart_toEndOf="@+id/iv_foodimg"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"/>
+        app:layout_constraintTop_toTopOf="@+id/iv_foodimg" />
+
+    <Button
+        android:id="@+id/btn_relate"
+        android:layout_width="50dp"
+        android:layout_height="220dp"
+        android:text="관련음식점보기"
+        android:textSize="20sp"
+        android:layout_marginStart="10dp"
+        app:layout_constraintBottom_toBottomOf="@+id/btn_refresh"
+        app:layout_constraintStart_toEndOf="@+id/btn_refresh"
+        app:layout_constraintTop_toTopOf="@+id/btn_refresh" />
 
     <Button
         android:id="@+id/btn_logout"
