--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,82 +6,14 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <LinearLayout
-        android:id="@+id/linearLayout"
+    <FrameLayout
+        android:id="@+id/lo_frame_main"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:weightSum="1"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        android:layout_height="match_parent"
+        app:layout_constraintBottom_toTopOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent">
-
-        <EditText
-            android:id="@+id/et_food"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="0.9"
-            android:hint="음식을 입력하세요." />
-
-        <Button
-            android:id="@+id/btn_enter"
-            android:layout_width="40dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="0.1"
-            android:text="입력" />
-    </LinearLayout>
-
-    <ImageView
-        android:id="@+id/iv_foodimg"
-        android:layout_width="180dp"
-        android:layout_height="180dp"
-        android:layout_marginStart="50dp"
-        app:layout_constraintEnd_toStartOf="@+id/btn_refresh"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/linearLayout"/>
-
-    <Button
-        android:id="@+id/btn_refresh"
-        android:layout_width="50dp"
-        android:layout_height="220dp"
-        android:layout_marginStart="20dp"
-        android:text="새로고침"
-        android:textSize="20sp"
-        app:layout_constraintBottom_toBottomOf="@+id/iv_foodimg"
-        app:layout_constraintEnd_toStartOf="@+id/btn_relate"
-        app:layout_constraintStart_toEndOf="@+id/iv_foodimg"
-        app:layout_constraintTop_toTopOf="@+id/iv_foodimg" />
-
-    <Button
-        android:id="@+id/btn_relate"
-        android:layout_width="50dp"
-        android:layout_height="220dp"
-        android:text="관련음식점보기"
-        android:textSize="20sp"
-        android:layout_marginStart="10dp"
-        app:layout_constraintBottom_toBottomOf="@+id/btn_refresh"
-        app:layout_constraintStart_toEndOf="@+id/btn_refresh"
-        app:layout_constraintTop_toTopOf="@+id/btn_refresh" />
-
-    <Button
-        android:id="@+id/btn_logout"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="로그아웃"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/btn_room"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/btn_room" />
-
-    <Button
-        android:id="@+id/btn_room"
-        android:layout_width="wrap_content"
-        android:layout_height="100dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginEnd="15dp"
-        android:layout_marginBottom="10dp"
-        android:text="대기열 생성/목록"
-        android:textSize="25dp"/>
+    </FrameLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
