--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -32,8 +32,8 @@
 
     <ImageView
         android:id="@+id/iv_foodimg"
-        android:layout_width="180dp"
-        android:layout_height="180dp"
+        android:layout_width="200dp"
+        android:layout_height="200dp"
         android:layout_marginStart="50dp"
         app:layout_constraintEnd_toStartOf="@+id/btn_refresh"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -45,7 +45,7 @@
         android:layout_width="50dp"
         android:layout_height="220dp"
         android:layout_marginStart="20dp"
-        android:text="새로고침"
+        android:text="메뉴추천받기"
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="@+id/iv_foodimg"
         app:layout_constraintEnd_toStartOf="@+id/btn_relate"
