--- a/app/src/main/res/layout/activity_create_room.xml
+++ b/app/src/main/res/layout/activity_create_room.xml
@@ -1,60 +1,71 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
-    <LinearLayout
-        android:orientation="vertical"
+    android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
+
+    <FrameLayout
+        android:id="@+id/fl_empty"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="90dp"
+        app:layout_constraintTop_toTopOf="parent">
+    </FrameLayout>
 
-        <FrameLayout
-            android:layout_width="match_parent"
-            android:layout_height="90dp"
-            android:layout_gravity="center_horizontal">
-        </FrameLayout>
+    <EditText
+        android:id="@+id/et_roomName"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@+id/fl_empty"
+        android:hint="방제를 입력하세요."/>
 
-        <LinearLayout
-            android:orientation="vertical"
-            android:layout_width="match_parent"
-            android:layout_height="40dp">
-
-            <EditText
-                android:id="@+id/et_roomName"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:hint="방제를 입력하세요."/>
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:orientation="horizontal"
-            android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:layout_gravity="center_horizontal"
-            android:weightSum="1">
-            <Spinner
-                android:id="@+id/spinner1"
-                android:layout_width="120dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="0.25" />
-            <Spinner
-                android:id="@+id/spinner2"
-                android:layout_width="120dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="0.25" />
-            <Spinner
-                android:id="@+id/spinner3"
-                android:layout_width="120dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="0.25" />
-            <Button
-                android:id="@+id/btn_register"
-                android:layout_width="120dp"
-                android:layout_height="wrap_content"
-                android:text="등록"
-                android:layout_weight="0.25" />
-
-        </LinearLayout>
+    <LinearLayout
+        android:id="@+id/ll_input"
+        android:orientation="horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        app:layout_constraintTop_toBottomOf="@+id/et_roomName"
+        android:layout_gravity="center_horizontal"
+        android:weightSum="1">
+        <Spinner
+            android:id="@+id/spinner1"
+            android:layout_width="120dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="0.25" />
+        <Spinner
+            android:id="@+id/spinner2"
+            android:layout_width="120dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="0.25" />
+        <Spinner
+            android:id="@+id/spinner3"
+            android:layout_width="120dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="0.25" />
+        <Button
+            android:id="@+id/btn_map"
+            android:layout_width="120dp"
+            android:layout_height="wrap_content"
+            android:text="입력"
+            android:layout_weight="0.25"/>
     </LinearLayout>
-</LinearLayout>
+
+    <com.naver.maps.map.MapView
+        android:id="@+id/mv_naver"
+        android:layout_width="match_parent"
+        android:layout_height="300dp"
+        app:layout_constraintTop_toBottomOf="@+id/ll_input"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"/>
+
+    <Button
+        android:id="@+id/btn_register"
+        android:layout_width="120dp"
+        android:layout_height="wrap_content"
+        android:layout_margin="10dp"
+        android:text="등록"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
+
+
+</androidx.constraintlayout.widget.ConstraintLayout>
 
