사이드바, 디자인 추가

--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -1,87 +1,194 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="MainFragment">
+    tools:context="MainFragment"
+    android:id="@+id/dl_main">
 
     <LinearLayout
-        android:id="@+id/linearLayout"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:weightSum="1"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:weightSum="1">
 
-        <EditText
-            android:id="@+id/et_food"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="0.9"
-            android:hint="음식을 입력하세요." />
+        <androidx.appcompat.widget.Toolbar
+            android:id="@+id/Toolbar"
+            android:layout_width="match_parent"
+            android:layout_height="?attr/actionBarSize"
+            app:contentInsetStart="0dp"
+            android:background="@color/PColor1">
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+                <ImageButton
+                    android:id="@+id/Ib_OpenSidebar"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="10dp"
+                    android:scaleType="fitCenter"
+                    android:background="@drawable/menu_bar"
+                    android:text="메뉴"/>
+
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight=".5">
+                </LinearLayout>
+
+                <TextView
+                    android:id="@+id/Tv_CampusTaurant"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:text="CampusTaurant"
+                    android:letterSpacing="0.12"
+                    android:gravity="center"
+                    android:textSize="32sp">
+                </TextView>
+
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="0.5">
+                </LinearLayout>
+
+                <ImageButton
+                    android:id="@+id/Ib_OpenNotification"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="10dp"
+                    android:background="@drawable/notification"/>
+
+            </LinearLayout>
+        </androidx.appcompat.widget.Toolbar>
+
+        <LinearLayout
+            android:id="@+id/ll_search"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:background="@color/PColor2"
+            android:layout_weight="0.16"
+            android:orientation="horizontal"
+            android:weightSum="1">
+
+            <EditText
+                android:id="@+id/et_food"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_weight="0.9"
+                android:hint="음식을 입력하세요."/>
+
+            <Button
+                android:id="@+id/btn_enter"
+                android:layout_width="40dp"
+                android:layout_height="match_parent"
+                android:layout_weight="0.1"
+                android:text="입력"/>
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_margin="10dp"
+            android:layout_weight="0.35"
+            android:orientation="horizontal"
+            android:weightSum="1">
+
+            <ImageView
+                android:id="@+id/iv_foodimg"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_marginRight="16dp"
+                android:layout_weight="1"
+                tools:srcCompat="@tools:sample/avatars" />
+
+            <ImageButton
+                android:id="@+id/btn_refresh"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="4dp"
+                android:background="@drawable/mainbutton1"/>
+
+            <ImageButton
+                android:id="@+id/btn_relate"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="4dp"
+                android:background="@drawable/mainbutton2"/>
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginLeft="16dp"
+            android:layout_marginEnd="16dp"
+            android:layout_marginRight="16dp"
+            android:layout_weight="0.25"
+            android:orientation="vertical"
+            android:weightSum="1"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:layout_gravity="center"
+                android:layout_marginTop="10dp"
+                android:text="실시간 대기열"
+                android:textSize="16dp"
+                android:background="@drawable/trapezoid"/>
+
+            <ImageButton
+                android:id="@+id/ib_realtime"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@drawable/realtime_list" />
+
+        </LinearLayout>
+
+        <TextView
+            android:id="@+id/textView2"
+            android:layout_width="match_parent"
+            android:layout_height="25dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginLeft="16dp"
+            android:layout_marginRight="10dp"
+            android:layout_weight="0.03"
+            android:text="밥친구 찾기"
+            android:textColor="@color/black"
+            android:shadowDx="-7.0"
+            android:shadowDy="7.0"
+            android:shadowColor="@color/black"
+            android:textSize="40sp"/>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="3dp"
+            android:background="@drawable/shape"
+            android:backgroundTint="@color/black"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:layout_marginBottom="20dp">
+        </LinearLayout>
 
         <Button
-            android:id="@+id/btn_enter"
-            android:layout_width="40dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="0.1"
-            android:text="입력" />
+            android:id="@+id/btn_room"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_margin="10dp"
+            android:layout_weight="0.16"
+            android:background="@drawable/shape"
+            android:backgroundTint="@color/PColor2"
+            android:text="대기열 확인하기"
+            android:textSize="40sp"/>
+
     </LinearLayout>
-
-    <ImageView
-        android:id="@+id/iv_foodimg"
-        android:layout_width="200dp"
-        android:layout_height="200dp"
-        android:layout_marginStart="50dp"
-        app:layout_constraintEnd_toStartOf="@+id/btn_refresh"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/linearLayout"/>
-
-    <Button
-        android:id="@+id/btn_refresh"
-        android:layout_width="50dp"
-        android:layout_height="220dp"
-        android:layout_marginStart="20dp"
-        android:text="메뉴추천받기"
-        android:textSize="20sp"
-        app:layout_constraintBottom_toBottomOf="@+id/iv_foodimg"
-        app:layout_constraintEnd_toStartOf="@+id/btn_relate"
-        app:layout_constraintStart_toEndOf="@+id/iv_foodimg"
-        app:layout_constraintTop_toTopOf="@+id/iv_foodimg" />
-
-    <Button
-        android:id="@+id/btn_relate"
-        android:layout_width="50dp"
-        android:layout_height="220dp"
-        android:text="관련음식점보기"
-        android:textSize="20sp"
-        android:layout_marginStart="10dp"
-        app:layout_constraintBottom_toBottomOf="@+id/btn_refresh"
-        app:layout_constraintStart_toEndOf="@+id/btn_refresh"
-        app:layout_constraintTop_toTopOf="@+id/btn_refresh" />
-
-    <Button
-        android:id="@+id/btn_logout"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="로그아웃"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/btn_room"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/btn_room" />
-
-    <Button
-        android:id="@+id/btn_room"
-        android:layout_width="wrap_content"
-        android:layout_height="100dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginEnd="15dp"
-        android:layout_marginBottom="10dp"
-        android:text="대기열 생성/목록"
-        android:textSize="25dp"/>
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <include
+        layout="@layout/sidebar_view"/>
+    <include
+        layout="@layout/notification_view"/>
+</androidx.drawerlayout.widget.DrawerLayout>
