--- a/app/src/main/res/layout/sidebar_view.xml
+++ b/app/src/main/res/layout/sidebar_view.xml
@@ -4,24 +4,25 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_weight="1"
-    android:layout_gravity="start"
     android:id="@+id/Sidebar"
+    android:layout_gravity="start"
     android:background="@color/PColor2"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:weightSum="1">
 
     <Button
         android:id="@+id/Bt_CloseSidebar"
         android:layout_width="48dp"
-        android:layout_height="wrap_content"
-        android:layout_weight="0.005"
+        android:layout_height="30dp"
         android:layout_gravity="end|right"
         android:background="@color/background"
-        android:hint="X" />
+        android:hint="X"
+        android:layout_weight="0.05"/>
 
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="300dp">
+        android:layout_height="wrap_content"
+        android:layout_weight="0.95">
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -37,6 +38,69 @@
                 android:text="사용자"
                 android:textColor="#757575"
                 android:textSize="40sp" />
+
+            <ImageView
+                android:id="@+id/iv_profile"
+                android:layout_width="200dp"
+                android:layout_height="200dp"
+                android:background="@drawable/person"
+                android:layout_gravity="center"/>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:padding="5dp">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    android:gravity="center">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="이름: "/>
+                    <TextView
+                        android:id="@+id/tv_name"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"/>
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    android:gravity="center">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"/>
+                    <TextView
+                        android:id="@+id/tv_sex"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="성별: "/>
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    android:gravity="center">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="나이: "/>
+                    <TextView
+                        android:id="@+id/tv_old"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content" />
+                </LinearLayout>
+
+            </LinearLayout>
 
             <TextView
                 android:layout_width="match_parent"
@@ -69,28 +133,20 @@
                 android:layout_height="80dp"
                 android:layout_weight="0.2"
                 android:layout_margin="10dp"/>
-
-            <Button
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_margin="10dp"
-                android:layout_weight="0.05"
-                android:background="@color/background"
-                android:text="로그아웃 기능"
-                android:textColor="#757575"
-                android:textSize="40sp" />
         </LinearLayout>
     </ScrollView>
-    <TextView
-        android:layout_width="30dp"
-        android:layout_height="300dp"
-        android:layout_weight="1"
-        android:text="앙기모띠">
-    </TextView>
-
-    <Button
-        android:id="@+id/btn_logout"
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="로그아웃"/>
+        android:orientation="horizontal"
+        android:layout_weight="0.05">
+
+        <Button
+            android:id="@+id/btn_logout"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="로그아웃"
+            android:layout_margin="10dp"/>
+    </LinearLayout>
+
 </LinearLayout>
