태그 삭제기능 구현

--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -2,10 +2,11 @@
 <androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/dl_main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="MainFragment"
-    android:id="@+id/dl_main">
+    android:background="#FFFFFF"
+    tools:context="MainFragment">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -17,8 +18,9 @@
             android:id="@+id/Toolbar"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
-            app:contentInsetStart="0dp"
-            android:background="@color/PColor1">
+            android:background="@color/PColor1"
+            app:contentInsetStart="0dp">
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -29,38 +31,35 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_margin="10dp"
-                    android:scaleType="fitCenter"
                     android:background="@drawable/menu_bar"
-                    android:text="메뉴"/>
+                    android:scaleType="fitCenter"
+                    android:text="메뉴" />
 
                 <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_weight=".5">
-                </LinearLayout>
+                    android:layout_weight=".5"></LinearLayout>
 
                 <TextView
                     android:id="@+id/Tv_CampusTaurant"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
-                    android:text="CampusTaurant"
-                    android:letterSpacing="0.12"
                     android:gravity="center"
-                    android:textSize="32sp">
-                </TextView>
+                    android:letterSpacing="0.12"
+                    android:text="CampusTaurant"
+                    android:textSize="32sp"></TextView>
 
                 <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_weight="0.5">
-                </LinearLayout>
+                    android:layout_weight="0.5"></LinearLayout>
 
                 <ImageButton
                     android:id="@+id/Ib_OpenNotification"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_margin="10dp"
-                    android:background="@drawable/notification"/>
+                    android:background="@drawable/notification" />
 
             </LinearLayout>
         </androidx.appcompat.widget.Toolbar>
@@ -69,8 +68,8 @@
             android:id="@+id/ll_search"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:background="@color/PColor2"
             android:layout_weight="0.16"
+            android:background="@color/PColor2"
             android:orientation="horizontal"
             android:weightSum="1">
 
@@ -79,14 +78,15 @@
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:layout_weight="0.9"
-                android:hint="음식을 입력하세요."/>
+                android:hint="음식을 입력하세요." />
 
             <Button
                 android:id="@+id/btn_enter"
                 android:layout_width="40dp"
                 android:layout_height="match_parent"
                 android:layout_weight="0.1"
-                android:text="입력"/>
+                android:backgroundTint="#843C0C"
+                android:text="입력" />
         </LinearLayout>
 
         <LinearLayout
@@ -103,21 +103,21 @@
                 android:layout_height="match_parent"
                 android:layout_marginRight="16dp"
                 android:layout_weight="1"
-                tools:srcCompat="@tools:sample/avatars"/>
+                tools:srcCompat="@tools:sample/avatars" />
 
             <ImageButton
                 android:id="@+id/btn_refresh"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_margin="4dp"
-                android:background="@drawable/mainbutton1"/>
+                android:background="@drawable/mainbutton1" />
 
             <ImageButton
                 android:id="@+id/btn_relate"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_margin="4dp"
-                android:background="@drawable/mainbutton2"/>
+                android:background="@drawable/mainbutton2" />
         </LinearLayout>
 
         <LinearLayout
@@ -136,12 +136,12 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:gravity="center"
                 android:layout_gravity="center"
                 android:layout_marginTop="10dp"
+                android:background="@drawable/trapezoid"
+                android:gravity="center"
                 android:text="실시간 대기열"
-                android:textSize="16dp"
-                android:background="@drawable/trapezoid"/>
+                android:textSize="16dp" />
 
             <ImageButton
                 android:id="@+id/ib_realtime"
@@ -155,25 +155,25 @@
             android:id="@+id/textView2"
             android:layout_width="match_parent"
             android:layout_height="25dp"
-            android:layout_marginTop="10dp"
             android:layout_marginLeft="16dp"
+            android:layout_marginTop="10dp"
             android:layout_marginRight="10dp"
             android:layout_weight="0.03"
-            android:text="밥친구 찾기"
-            android:textColor="@color/black"
+            android:shadowColor="@color/black"
             android:shadowDx="-7.0"
             android:shadowDy="7.0"
-            android:shadowColor="@color/black"
-            android:textSize="40sp"/>
+            android:text="밥친구 찾기"
+            android:textColor="@color/black"
+            android:textSize="40sp" />
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="3dp"
-            android:background="@drawable/shape"
-            android:backgroundTint="@color/black"
             android:layout_marginLeft="10dp"
             android:layout_marginRight="10dp"
-            android:layout_marginBottom="20dp">
-        </LinearLayout>
+            android:layout_marginBottom="20dp"
+            android:background="@drawable/shape"
+            android:backgroundTint="@color/black"></LinearLayout>
 
         <Button
             android:id="@+id/btn_room"
@@ -184,11 +184,11 @@
             android:background="@drawable/shape"
             android:backgroundTint="@color/PColor2"
             android:text="대기열 확인하기"
-            android:textSize="40sp"/>
+            android:textSize="40sp" />
 
     </LinearLayout>
-    <include
-        layout="@layout/sidebar_view"/>
-    <include
-        layout="@layout/notification_view"/>
+
+    <include layout="@layout/sidebar_view" />
+
+    <include layout="@layout/notification_view" />
 </androidx.drawerlayout.widget.DrawerLayout>
