--- a/app/src/main/res/layout/activity_create_room.xml
+++ b/app/src/main/res/layout/activity_create_room.xml
@@ -1,61 +1,112 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    android:background="#FFFFFF">
 
     <FrameLayout
         android:id="@+id/fl_empty"
         android:layout_width="match_parent"
         android:layout_height="90dp"
-        app:layout_constraintTop_toTopOf="parent">
-    </FrameLayout>
+        app:layout_constraintTop_toTopOf="parent"></FrameLayout>
 
     <EditText
         android:id="@+id/et_roomName"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@+id/fl_empty"
-        android:hint="방제를 입력하세요."/>
+        android:hint="방제를 입력하세요."
+        android:textColorHint="@color/black"
+        android:textColor="@color/black"
+        app:layout_constraintTop_toBottomOf="@+id/fl_empty" />
 
     <LinearLayout
         android:id="@+id/ll_input"
-        android:orientation="horizontal"
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        app:layout_constraintTop_toBottomOf="@+id/et_roomName"
         android:layout_gravity="center_horizontal"
-        android:weightSum="1">
+        android:orientation="horizontal"
+        android:weightSum="1"
+        app:layout_constraintTop_toBottomOf="@+id/et_roomName">
+
         <Spinner
             android:id="@+id/spinner1"
             android:layout_width="120dp"
             android:layout_height="wrap_content"
             android:layout_weight="0.25" />
+
         <Spinner
             android:id="@+id/spinner2"
             android:layout_width="120dp"
             android:layout_height="wrap_content"
             android:layout_weight="0.25" />
+
         <Spinner
             android:id="@+id/spinner3"
             android:layout_width="120dp"
             android:layout_height="wrap_content"
             android:layout_weight="0.25" />
+
         <Button
             android:id="@+id/btn_map"
             android:layout_width="120dp"
             android:layout_height="wrap_content"
-            android:text="입력"
-            android:layout_weight="0.25"/>
+            android:layout_weight="0.25"
+            android:text="입력"/>
     </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/ll_tag"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:weightSum="1"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/ll_input">
+
+        <EditText
+            android:id="@+id/et_tag"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_weight="0.9"
+            android:hint="태그를 입력하세요."
+            android:textColorHint="@color/black"
+            android:textColor="@color/black"/>
+
+        <Button
+            android:id="@+id/btn_enter"
+            android:layout_width="40dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="0.1"
+            android:text="입력" />
+
+    </LinearLayout>
+
+    <!--recyclerview: 많은 수의 데이터 집합을, 제한된 영역 내에서 유연하게(flexible) 표시할 수 있도록 만들어주는 위젯-->
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rv_tag"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:scrollbarFadeDuration="0"
+        android:scrollbarSize="5dp"
+        android:scrollbarThumbVertical="@android:color/darker_gray"
+        android:scrollbars="horizontal"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/ll_tag">
+
+    </androidx.recyclerview.widget.RecyclerView>
 
     <com.naver.maps.map.MapView
         android:id="@+id/mv_naver"
         android:layout_width="match_parent"
         android:layout_height="300dp"
-        app:layout_constraintTop_toBottomOf="@+id/ll_input"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"/>
+        app:layout_constraintTop_toBottomOf="@+id/rv_tag" />
 
     <Button
         android:id="@+id/btn_register"
