--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -84,7 +84,7 @@
                     android:id="@+id/tv_name"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="전종훈"/>
+                    android:text=""/>
             </LinearLayout>
 
             <LinearLayout
@@ -101,7 +101,7 @@
                     android:id="@+id/tv_sex"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="남"/>
+                    android:text=""/>
             </LinearLayout>
 
             <LinearLayout
@@ -119,6 +119,14 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="23세"/>
+                <View
+                    android:layout_width="0dp"
+                    android:layout_height="0dp"
+                    android:layout_weight="1"/>
+                <ImageButton
+                    android:id="@+id/ib_kick"
+                    android:layout_width="30dp"
+                    android:layout_height="30dp"/>
             </LinearLayout>
 
         </LinearLayout>
