--- a/app/src/main/res/layout/activity_edit_profile.xml
+++ b/app/src/main/res/layout/activity_edit_profile.xml
@@ -56,7 +56,15 @@
                 android:id="@+id/iv_profile"
                 android:layout_width="200dp"
                 android:layout_height="200dp"
-                android:background="@drawable/person"/>
+                android:background="@drawable/person"
+                android:layout_marginStart="10dp"/>
+
+            <TextView
+                android:id="@+id/tv_rating"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="bottom"
+                android:layout_marginStart="10dp"/>
         </LinearLayout>
 
         <View
