--- a/app/src/main/res/layout/record_list.xml
+++ b/app/src/main/res/layout/record_list.xml
@@ -36,7 +36,7 @@
             android:layout_height="match_parent"
             android:layout_weight="0.05">
             <TextView
-                android:id="@+id/tv_rate"
+                android:id="@+id/tv_rating"
                 android:gravity="center"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
