--- a/app/src/main/res/layout/sidebar_view.xml
+++ b/app/src/main/res/layout/sidebar_view.xml
@@ -40,12 +40,25 @@
                 android:textColor="#757575"
                 android:textSize="40sp" />
 
-            <ImageView
-                android:id="@+id/iv_profile"
-                android:layout_width="200dp"
-                android:layout_height="200dp"
-                android:background="@drawable/person"
-                android:layout_gravity="center"/>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center">
+
+                <ImageView
+                    android:id="@+id/iv_profile"
+                    android:layout_width="200dp"
+                    android:layout_height="200dp"
+                    android:background="@drawable/person"
+                    android:layout_marginStart="10dp"/>
+
+                <TextView
+                    android:id="@+id/tv_rating"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="bottom"
+                    android:layout_marginStart="10dp"/>
+            </LinearLayout>
 
             <LinearLayout
                 android:layout_width="match_parent"
